WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291992
[content-visibility] Invalidate display boxes on content mutation inside skipped subtree
https://bugs.webkit.org/show_bug.cgi?id=291992
Summary
[content-visibility] Invalidate display boxes on content mutation inside skip...
alan
Reported
2025-04-23 19:54:03 PDT
<
rdar://145465279
>
Attachments
[fast-cq]Patch
(4.14 KB, patch)
2025-04-23 19:56 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-04-23 19:56:18 PDT
Created
attachment 475036
[details]
[fast-cq]Patch
EWS
Comment 2
2025-04-24 05:30:40 PDT
Committed
294060@main
(1dd8097ed2e4): <
https://commits.webkit.org/294060@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 475036
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug