[content-visibility] Invalidate display boxes on content mutation inside skipped subtree https://bugs.webkit.org/show_bug.cgi?id=291992 <rdar://145465279>

Reviewed by Antti Koivisto.

We should not keep stale content around especially when associated renderers are going away.

* LayoutTests/fast/misc/content-visibility-hidden-on-editing-crash-expected.txt: Added.
* LayoutTests/fast/misc/content-visibility-hidden-on-editing-crash.html: Added.
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::insertedIntoTree):
(WebCore::LayoutIntegration::LineLayout::removedFromTree):
(WebCore::LayoutIntegration::LineLayout::updateTextContent):

Canonical link: https://commits.webkit.org/294060@main